# komonBot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  bot.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 038b21c9ae1f_initial.py  add_role_to_whitelist_users.py
site-scripts/: contact-form.js
src/: config.py  database.py  exceptions.py  logging_config.py  main.py
src/api/: contacts.py  courses.py  deps.py  events.py  router.py  sync.py  users.py  webhook.py
src/bot/: setup.py
src/models/: __init__.py  audit.py  contact.py  course.py  event.py  user.py
src/repositories/: __init__.py  base.py  contact.py  course.py  event.py  user.py
src/schemas/: __init__.py  common.py  contact.py  course.py  event.py  user.py
src/services/: audit.py  backup.py  content_page.py  course.py  event.py  ghost.py  notification.py  scheduler.py
src/utils/: ghost_jwt.py  image_validation.py  telegram_auth.py
tests/: conftest.py  factories.py
tests/test_api/: test_contacts.py  test_courses.py  test_events.py  test_users.py
tests/test_models/: test_models.py
tests/test_security/: test_body_size.py  test_filename_sanitize.py  test_notification_throttle.py  test_rate_limit.py  test_timing_check.py
tests/test_services/: test_backup.py  test_content_page.py
tests/test_utils/: test_telegram_auth.py
webapp/: app.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
webapp/components/: contact-list.js  course-form.js  course-list.js  event-form.js  event-list.js  user-list.js
(+18 files in other folders)
